add hospital name

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">51/3, Ngam Wong Wan Rd., Lat Yao, Bangkok 10900 Thailand<br/>+66 2 561 1111</p>
+                        <p class="lead mb-0">Vibhavadi Hospital, Tel. +66 2 561 1111 <br/>51/3, Ngam Wong Wan Rd., Lat Yao, Bangkok 10900 Thailand</p>
                     </div>
                 </div>
             </div>
