adjust delivery date

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta property="og:url" content="https://dan.pijittum.com/"/>
+        <meta property="og:type" content="article"/>
+        <meta property="og:title" content="Dan's Delivery Countdown"/>
+        <meta property="og:description" content="An invitation and countdown for Dan Pijittum delivery schedule"/>
+        <meta property="og:image" content="https://dan.pijittum.com/og320.png"/>
+        <meta property="og:image:url" content="https://dan.pijittum.com/og320.png"/>
+        <meta property="og:image:secure_url" content="https://dan.pijittum.com/og320.png"/>
+        <meta property="og:image:width" content="320"/>
+        <meta property="og:image:height" content="320"/>
+        <meta property="og:image:type" content="images/png"/>
         <title>Dan's Delivery Countdown</title>
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link async href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link async href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link async href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono:400,700" rel="stylesheet" type="text/css"/>
     </head>
     <body id="page-top">
         <div id="app" />
